--- a/lesson_11/data-fetching-hw/package.json
+++ b/lesson_11/data-fetching-hw/package.json
@@ -13,9 +13,11 @@
     "@types/node": "^16.18.114",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "antd": "^5.22.0",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "tailwindcss": "^3.4.14"
   }
 }
